apply plugin: 'com.android.library'
apply plugin: 'com.neenbedankt.android-apt'
apply plugin: 'me.tatarka.retrolambda'
apply plugin: 'android-apt'
apply plugin: 'maven'
apply plugin: 'realm-android'


buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
    }
}

android {
    compileSdkVersion 25
    buildToolsVersion '25.0.0'
    defaultConfig {
        minSdkVersion 16
        targetSdkVersion 25
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
    }

    buildTypes {
        debug {
            debuggable true
//            consumerProguardFiles 'proguard-project.txt'
        }
        release {
//            consumerProguardFiles 'proguard-project.txt'
        }
    }

    lintOptions {
        abortOnError false
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests.all {
            // All the usual Gradle options.
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
        incremental false
    }

    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
    }
}

ext {
    supportLibraryVersion = '25.0.0'
    retrofitVersion = '2.1.0'
    okhttpVersion = '3.4.1'
    googlePlayVersion = '9.8.0'
    androidSupportTest = '0.5'
    espressoCore = '2.2.2'
    hamcrest = '1.3'
    junit = '4.12'
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    compile 'com.android.support:multidex:1.0.1'
    //google apis
    compile "com.google.android.gms:play-services-gcm:$googlePlayVersion"
    // Network
    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
    compile "com.squareup.okhttp3:okhttp:$okhttpVersion"
    compile "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
    compile 'com.facebook.network.connectionclass:connectionclass:1.0.1'
    // Rx
    compile 'io.reactivex:rxandroid:1.2.1'
    compile 'io.reactivex:rxjava:1.1.7'
    //test compile libraries
    androidTestCompile "com.android.support.test:runner:$androidSupportTest"
    androidTestCompile "com.android.support.test:rules:$androidSupportTest"
    androidTestCompile "junit:junit:$junit"
    androidTestCompile "org.hamcrest:hamcrest-library:$hamcrest"
    androidTestCompile "com.android.support:support-annotations:$supportLibraryVersion"
    androidTestCompile "com.android.support.test.espresso:espresso-core:$espressoCore"
    androidTestCompile 'org.mockito:mockito-core:1.10.17'
    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'

    testCompile "junit:junit:$junit"
    testCompile "org.hamcrest:hamcrest-library:$hamcrest"
    testCompile "com.android.support:support-annotations:$supportLibraryVersion"
    testCompile "com.android.support.test.espresso:espresso-core:$espressoCore"
    testCompile "org.mockito:mockito-core:2.0.57-beta"
}

apply plugin: 'com.google.gms.google-services'